--- a/src/code/controls/Socket.fxml
+++ b/src/code/controls/Socket.fxml
@@ -12,7 +12,7 @@
 
 <fx:root type="javafx.scene.layout.VBox" xmlns:fx="http://javafx.com/fxml" alignment="CENTER" >
     <HBox alignment="CENTER">
-        <Circle radius="5.0"/>
+        <Button fx:id="button"/>
     </HBox>
 </fx:root>
 
