added filer choosing in NodeControl

--- a/src/code/controls/InputNode.fxml
+++ b/src/code/controls/InputNode.fxml
@@ -10,11 +10,11 @@
 
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <VBox style="-fx-background-color: #DDD;">
-        <Pane style="-fx-background-color: #CCC;"><Label fx:id="title" text="Title" style="-fx-padding: 5px;"/></Pane>
+        <Pane style="-fx-background-color: #CCC;"><Label fx:id="title" text="Image input" style="-fx-padding: 5px;"/></Pane>
         <BorderPane>
             <left>
                 <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Button fx:id="button" text="In"/></HBox>
+                    <HBox><Button fx:id="button" text="Select image"/></HBox>
                 </VBox>
             </left>
             <right>
