--- a/src/code/controls/NodeControl.fxml
+++ b/src/code/controls/NodeControl.fxml
@@ -10,7 +10,7 @@
 
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <VBox style="-fx-background-color: #DDD;">
-        <Pane style="-fx-background-color: #CCC;"><Label fx:id="title" text="Title" style="-fx-padding: 5px;"/></Pane>
+        <Pane fx:id="topPane" style="-fx-background-color: #CCC;"></Pane>
         <BorderPane>
             <left>
                 <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
