node improvements and warnings

--- a/src/code/controls/InputNode.fxml
+++ b/src/code/controls/InputNode.fxml
@@ -15,11 +15,12 @@
             <left>
                 <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
                     <HBox><Button fx:id="button" text="Select image"/></HBox>
+                    <HBox><Button fx:id="view" text="View"/></HBox>
                 </VBox>
             </left>
             <right>
                 <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Label text="Out"/><Socket fx:id="s1out"/></HBox>
+                    <HBox><Label text="out"/><Socket fx:id="s1out"/></HBox>
                 </VBox>
             </right>
         </BorderPane>
