--- a/src/code/controls/InputNode.fxml
+++ b/src/code/controls/InputNode.fxml
@@ -1,26 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<?import code.controls.Socket?>
+<?import code.controls.SourceSocket?>
 
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <VBox style="-fx-background-color: #DDD;">
         <Pane fx:id="titlePane" style="-fx-background-color: #e0ffff;"><Label text="Image input" style="-fx-padding: 5px;"/></Pane>
         <BorderPane>
             <left>
-                <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Button fx:id="button" text="Select image"/></HBox>
-                    <HBox><Button fx:id="view" text="View"/></HBox>
+                <VBox style="-fx-padding: 10px; -fx-spacing: 5px;"> <!--alignment="CENTER"-->
+                    <Button fx:id="button" text="Select image"/>
+                    <Button fx:id="view" text="View"/>
                 </VBox>
             </left>
             <right>
-                <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Label text="out"/><Socket fx:id="s1out"/></HBox>
+                <VBox alignment="TOP_RIGHT" style="-fx-padding: 10px; -fx-spacing: 5px;">
+                    <SourceSocket fx:id="s1out"/>
                 </VBox>
             </right>
         </BorderPane>
