--- a/src/code/controls/OutputNode.fxml
+++ b/src/code/controls/OutputNode.fxml
@@ -1,26 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-
-<?import code.controls.Socket?>
+<?import code.controls.TargetSocket?>
 
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
     <VBox style="-fx-background-color: #DDD;">
         <Pane fx:id="titlePane" style="-fx-background-color: #fff8dc;"><Label text="Image output" style="-fx-padding: 5px;"/></Pane>
         <BorderPane>
             <left>
-                <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Socket fx:id="s1in"/><Label text="in"/></HBox>
+                <VBox style="-fx-padding: 10px; -fx-spacing: 5px;"> <!--alignment="TOP_LEFT"-->
+                    <TargetSocket fx:id="s1in"/>
                 </VBox>
             </left>
             <right>
-                <VBox alignment="CENTER" style="-fx-padding: 10px; -fx-spacing: 5px;">
-                    <HBox><Button fx:id="button" text="Select path"/></HBox>
-                    <HBox><Button fx:id="view" text="View"/></HBox>
+                <VBox alignment="TOP_RIGHT" style="-fx-padding: 10px; -fx-spacing: 5px;">
+                    <Button fx:id="button" text="Select path"/>
+                    <Button fx:id="view" text="View"/>
                 </VBox>
             </right>
         </BorderPane>
