--- a/src/code/controls/layout.fxml
+++ b/src/code/controls/layout.fxml
@@ -7,6 +7,7 @@
             <Menu text="File">
                 <MenuItem fx:id="computeOutput" text="Compute output"/>
                 <MenuItem fx:id="clearCanvas" text="Clear canvas"/>
+                <MenuItem fx:id="saveProject" text="Save project"/>
             </Menu>
             <Menu text="Help">
                 <MenuItem fx:id="descriptions" text="Filters descriptions"/>
