--- a/src/code/controls/layout.fxml
+++ b/src/code/controls/layout.fxml
@@ -8,6 +8,7 @@
                 <MenuItem fx:id="computeOutput" text="Compute output"/>
                 <MenuItem fx:id="clearCanvas" text="Clear canvas"/>
                 <MenuItem fx:id="saveProject" text="Save project"/>
+                <MenuItem fx:id="loadProject" text="Load project"/>
             </Menu>
             <Menu text="Help">
                 <MenuItem fx:id="descriptions" text="Filters descriptions"/>
